# magnum-function-plot

./: CMakeLists.txt  CartesianGrid.h  FunctionPlot.cpp  PrimitivesExample.cpp  Units.cpp  Units.h  notes-windows-opengl.txt
src/: CMakeLists.txt  CartesianGrid.h  FunctionPlot.cpp  FunctionPlot.h  PlotApp.cpp  PlotConfig.h  Units.cpp  Units.h  fox-glplot.cpp
